<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single"
        tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_menu_income"
            android:title="@string/income" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_menu_payments"
            android:title="@string/payments" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/upcoming" />
    </group>
</menu>