<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/txtBillsEditDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="32dp"
        android:text="@string/bills_due_date"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBillsEditDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBillsEditDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/bills_description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtBillsEditAmount"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/bills_amount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBillsEditDescription" />

    <Button
        android:id="@+id/billsSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/billsDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBillsEditDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/billsDescriptionEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBillsEditDescription"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/billsAmountEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBillsEditAmount"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>